Fix for cell phone picking
Larger slices where cropped on cell phones

--- a/css/style.scss
+++ b/css/style.scss
@@ -474,6 +474,7 @@ h4 {
             position: relative;
             margin: 5px;
             margin-bottom: 20px;
+            width: 48%;
         }
     }
     .slice {
